# LightNetwork-Core-Windows

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Activation.h  ActivationFunctions.cpp  ActivationFunctions.h  Conv2D.cpp  Conv2D.h  Flatten.cpp  Flatten.h  FullyConnected.cpp  FullyConnected.h  HighResClock.cpp  HighResClock.h  Layer.cpp  Layer.h  LightNetwork.cpp  LightNetwork.h  LightNetworkHelper.cpp  LightNetworkHelper.h  Matrix.cpp  Matrix.h  Matrix3D.h  MaxPooling.cpp  MaxPooling.h  Minerva.cpp  Minerva.h  MnistImporter.cpp  MnistImporter.h  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp
src/layers/: Activation.h  Flatten.cpp  FullyConnected.cpp  Layer.h  MaxPooling.cpp  MaxPooling.h
src/mnist/: MnistImporter.cpp  MnistImporter.h
src/utils/: HighResClock.h  Matrix3D.cpp  Minerva.cpp  Minerva.h  NeuralNetwork.cpp  NeuralNetwork.h
